--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 {% block body %} 
 <nav class="navbar nav-pills flex-column flex-sm-row navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link active" href="#">Nekstep</a>
-    <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#">Engineering</a>
-    <a class="flex-sm-fill text-sm-center nav-link" href="#">Science</a>
-    <a class="flex-sm-fill text-sm-center nav-link" href="#">Medicine</a>
-    <a class="flex-sm-fill text-sm-center nav-link disabled">Others</a>  
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link active" href="/">Nekstep</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/engineering">Engineering</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/science">Science</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/medicine">Medicine</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/others">Others</a>  
   </div>
 </nav>
 {% endblock %}
