--- a/templates/science.html
+++ b/templates/science.html
@@ -3,7 +3,7 @@
 {% block body %} 
 <nav class="navbar nav-pills flex-column flex-sm-row navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" href="/">Nekstep</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" href="/"><strong>Nekstep</strong></a>
     <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/engineering">Engineering</a>
     <a class="navbar-brand flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Science</a>
     <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/medicine">Medicine</a>
