--- a/templates/medicine.html
+++ b/templates/medicine.html
@@ -3,11 +3,48 @@
 {% block body %} 
 <nav class="navbar nav-pills flex-column flex-sm-row navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" href="/"><strong>Nekstep</strong></a>
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/engineering">Engineering</a>
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/science">Science</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" href="/" style="background-color: #dddddd;"><strong>Nekstep</strong></a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/engineering" style="background-color: #dddddd;">Engineering</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/science" style="background-color: #dddddd;">Science</a>
     <a class="navbar-brand flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Medicine</a>
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/others"">Others</a>  
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/others" style="background-color: #dddddd;">Others</a>  
   </div>
 </nav>
+
+<hr class="my-2">
+
+<h1>Curriculum & Careers</h1>
+<div class="list-group w-auto">
+    <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+        <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+        <div class="d-flex gap-2 w-100 justify-content-between">
+        <div>
+            <h6 class="mb-0">List group item heading</h6>
+            <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+        </div>
+        <small class="opacity-50 text-nowrap">now</small>
+        </div>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+        <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+        <div class="d-flex gap-2 w-100 justify-content-between">
+        <div>
+            <h6 class="mb-0">Another title here</h6>
+            <p class="mb-0 opacity-75">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>
+        </div>
+        <small class="opacity-50 text-nowrap">3d</small>
+        </div>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+        <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+        <div class="d-flex gap-2 w-100 justify-content-between">
+        <div>
+            <h6 class="mb-0">Third heading</h6>
+            <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+        </div>
+        <small class="opacity-50 text-nowrap">1w</small>
+        </div>
+    </a>
+</div>
+
 {% endblock %}
