--- a/templates/others.html
+++ b/templates/others.html
@@ -3,11 +3,13 @@
 {% block body %} 
 <nav class="navbar nav-pills flex-column flex-sm-row navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" href="/"><strong>Nekstep</strong></a>
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/engineering">Engineering</a>
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/science">Science</a>
-    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/medicine">Medicine</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" href="/" style="background-color: #dddddd;"><strong>Nekstep</strong></a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/engineering" style="background-color: #dddddd;">Engineering</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/science" style="background-color: #dddddd;">Science</a>
+    <a class="navbar-brand flex-sm-fill text-sm-center nav-link" aria-current="page" href="/medicine" style="background-color: #dddddd;">Medicine</a>
     <a class="navbar-brand flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Others</a>  
   </div>
 </nav>
+
+<hr class="my-2">
 {% endblock %}
