--- a/templates/medicine.html
+++ b/templates/medicine.html
@@ -47,4 +47,17 @@
     </a>
 </div>
 
+<div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-2 mb-3">
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="/engineering" class="nav-link px-2 text-muted">Engineering</a></li>
+        <li class="nav-item"><a href="/science" class="nav-link px-2 text-muted">Science</a></li>
+        <li class="nav-item"><a href="/medicine" class="nav-link px-2 text-muted">Medicine</a></li>
+        <li class="nav-item"><a href="/others" class="nav-link px-2 text-muted">Others</a></li>
+      </ul>
+      <p class="text-center text-muted">Data Provided by 6/3 No. 3, 4, 5, 6, 7</p>
+    </footer>
+</div>
+
 {% endblock %}
