--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,10 +12,8 @@
             .navbar-brand:hover{
                 background-color: #dddddd;
             }
-            .clickable {
+            .clickable:hover{
                 cursor: pointer;
-            }
-            .card:hover{
                 background-color: #dddddd;
                 transition: background-color 0.5s ease;
             }
