--- a/templates/medicine.html
+++ b/templates/medicine.html
@@ -13,6 +13,64 @@
 
 <hr class="my-2">
 
+<div class="accordion" id="accordionExample">
+    {% for uni, uniList in programList.items() %}
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="heading{{uni}}">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}" aria-expanded="false" aria-controls="collapse{{uni}}">
+                {{uni}}
+            </button>
+        </h2>
+        <div id="collapse{{uni}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}" data-bs-parent="#accordionExample">
+            <div class="accordion-body" id="body{{uni}}">
+                <div class="accordion" id="accordionExample{{uni}}">
+                    {% for fac, facList in uniList.items() %}
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{uni}}{{fac}}">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}{{fac}}" aria-expanded="false" aria-controls="collapse{{uni}}{{fac}}">
+                                {{fac}}
+                            </button>
+                        </h2>
+                        <div id="collapse{{uni}}{{fac}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}" data-bs-parent="#accordionExample{{uni}}">
+                            <div class="accordion-body" id="body{{uni}}{{fac}}">
+                                <div class="accordion" id="accordionExample{{uni}}{{fac}}">
+                                    {% for round, roundList in facList.items() %}
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="heading{{uni}}{{fac}}{{round}}">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}{{fac}}{{round}}" aria-expanded="false" aria-controls="collapse{{uni}}{{fac}}{{round}}">
+                                                {{round}}
+                                            </button>
+                                        </h2>
+                                        <div id="collapse{{uni}}{{fac}}{{round}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}{{round}}" data-bs-parent="#accordionExample{{uni}}{{fac}}">
+                                            <div class="accordion-body" id="body{{uni}}{{fac}}{{round}}">
+                                                <div class="container text-center">
+                                                {% for coll, vall in round.items() %}
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            {{coll}}
+                                                        </div>
+                                                        <div class="col">
+                                                            {{vall}}
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
 <h1>Curriculum & Careers</h1>
 <div class="list-group w-auto">
     <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -56,7 +114,7 @@
         <li class="nav-item"><a href="/medicine" class="nav-link px-2 text-muted">Medicine</a></li>
         <li class="nav-item"><a href="/others" class="nav-link px-2 text-muted">Others</a></li>
       </ul>
-      <p class="text-center text-muted">Data Provided by 6/3 No. 3, 4, 5, 6, 7</p>
+      <p class="text-center text-muted">Data Provided by 6/3 No. 3, 4, 5, 6, 7. Website Created by 6/3 No.12, 17</p>
     </footer>
 </div>
 
