--- a/templates/others.html
+++ b/templates/others.html
@@ -13,65 +13,75 @@
 
 <hr class="my-2">
 
-<div class="container">
-    <div class="accordion" id="accordionExample">
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h2 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Accordion 1
+<div class="accordion" id="accordionExample">
+    {% for uni, uniList in programList.items() %}
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="heading{{uni}}">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}" aria-expanded="false" aria-controls="collapse{{uni}}">
+                {{uni}}
             </button>
-          </h2>
-        </div>
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-          <div class="card-body">
-            <div class="accordion" id="innerAccordion">
-              <div class="card">
-                <div class="card-header" id="headingTwo">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                      Inner Accordion 1
-                    </button>
-                  </h2>
+        </h2>
+        <div id="collapse{{uni}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}" data-bs-parent="#accordionExample">
+            <div class="accordion-body" id="body{{uni}}">
+                <div class="accordion" id="accordionExample{{uni}}">
+                    {% for fac, facList in uniList.items() %}
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{uni}}{{fac}}">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}{{fac}}" aria-expanded="false" aria-controls="collapse{{uni}}{{fac}}">
+                                {{fac}}
+                            </button>
+                        </h2>
+                        <div id="collapse{{uni}}{{fac}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}" data-bs-parent="#accordionExample{{uni}}">
+                            <div class="accordion-body" id="body{{uni}}{{fac}}">
+                                <div class="accordion" id="accordionExample{{uni}}{{fac}}">
+                                    {% for round, roundList in facList.items() %}
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="heading{{uni}}{{fac}}{{round}}">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}{{fac}}{{round}}" aria-expanded="false" aria-controls="collapse{{uni}}{{fac}}{{round}}">
+                                                {{round}}
+                                            </button>
+                                        </h2>
+                                        <div id="collapse{{uni}}{{fac}}{{round}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}{{round}}" data-bs-parent="#accordionExample{{uni}}{{fac}}">
+                                            <div class="accordion-body" id="body{{uni}}{{fac}}{{round}}">
+                                                <div class="container text-center">
+                                                {% for coll, vall in round.items() %}
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            {{coll}}
+                                                        </div>
+                                                        <div class="col">
+                                                            {{vall}}
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </div>
-                <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#innerAccordion">
-                  <div class="card-body">
-                    Inner Accordion 1 Content
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header" id="headingThree">
-                  <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Inner Accordion 2
-                    </button>
-                  </h2>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#innerAccordion">
-                  <div class="card-body">
-                    Inner Accordion 2 Content
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="card">
-        <div class="card-header" id="headingFour">
-          <h2 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              Accordion 2
-            </button>
-          </h2>
-        </div>
-        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-          <div class="card-body">
-            Accordion 2 Content
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
+    {% endfor %}
+</div>
+
+<div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-2 mb-3">
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="/engineering" class="nav-link px-2 text-muted">Engineering</a></li>
+        <li class="nav-item"><a href="/science" class="nav-link px-2 text-muted">Science</a></li>
+        <li class="nav-item"><a href="/medicine" class="nav-link px-2 text-muted">Medicine</a></li>
+        <li class="nav-item"><a href="/others" class="nav-link px-2 text-muted">Others</a></li>
+      </ul>
+      <p class="text-center text-muted">Data Provided by 6/3 No. 1, 8, 16, 20, 21. Website Created by 6/3 No.12, 17</p>
+    </footer>
+</div>
+
 {% endblock %}
