--- a/templates/science.html
+++ b/templates/science.html
@@ -13,29 +13,75 @@
 
 <hr class="my-2">
 
-<div class="accordion" id="accordionPanelsStayOpenExample">
+<div class="accordion" id="accordionExample">
+    {% for uni, uniList in programList.items() %}
     <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                จุฬาลงกล่อง ยูหนิเวอร์ซิติี้
+        <h2 class="accordion-header" id="heading{{uni}}">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}" aria-expanded="false" aria-controls="collapse{{uni}}">
+                {{uni}}
             </button>
         </h2>
-        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-            <div class="accordion-body">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                            คะณ้าหมูกรอบ
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                        <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <div id="collapse{{uni}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}" data-bs-parent="#accordionExample">
+            <div class="accordion-body" id="body{{uni}}">
+                <div class="accordion" id="accordionExample{{uni}}">
+                    {% for fac, facList in uniList.items() %}
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{uni}}{{fac}}">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}{{fac}}" aria-expanded="false" aria-controls="collapse{{uni}}{{fac}}">
+                                {{fac}}
+                            </button>
+                        </h2>
+                        <div id="collapse{{uni}}{{fac}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}" data-bs-parent="#accordionExample{{uni}}">
+                            <div class="accordion-body" id="body{{uni}}{{fac}}">
+                                <div class="accordion" id="accordionExample{{uni}}{{fac}}">
+                                    {% for round, roundList in facList.items() %}
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="heading{{uni}}{{fac}}{{round}}">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{uni}}{{fac}}{{round}}" aria-expanded="false" aria-controls="collapse{{uni}}{{fac}}{{round}}">
+                                                {{round}}
+                                            </button>
+                                        </h2>
+                                        <div id="collapse{{uni}}{{fac}}{{round}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}{{round}}" data-bs-parent="#accordionExample{{uni}}{{fac}}">
+                                            <div class="accordion-body" id="body{{uni}}{{fac}}{{round}}">
+                                                <div class="container text-center">
+                                                {% for coll, vall in round.items() %}
+                                                    <div class="row">
+                                                        <div class="col">
+                                                            {{coll}}
+                                                        </div>
+                                                        <div class="col">
+                                                            {{vall}}
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
     </div>
+    {% endfor %}
 </div>
+
+<div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-2 mb-3">
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="/engineering" class="nav-link px-2 text-muted">Engineering</a></li>
+        <li class="nav-item"><a href="/science" class="nav-link px-2 text-muted">Science</a></li>
+        <li class="nav-item"><a href="/medicine" class="nav-link px-2 text-muted">Medicine</a></li>
+        <li class="nav-item"><a href="/others" class="nav-link px-2 text-muted">Others</a></li>
+      </ul>
+      <p class="text-center text-muted">Data Provided by 6/3 No. 9, 24, 13, 19. Website Created by 6/3 No.12, 17</p>
+    </footer>
+</div>
+
 {% endblock %}
