--- a/templates/science.html
+++ b/templates/science.html
@@ -44,7 +44,7 @@
                                         <div id="collapse{{uni}}{{fac}}{{round}}" class="accordion-collapse collapse" aria-labelledby="heading{{uni}}{{fac}}{{round}}" data-bs-parent="#accordionExample{{uni}}{{fac}}">
                                             <div class="accordion-body" id="body{{uni}}{{fac}}{{round}}">
                                                 <div class="container text-center">
-                                                {% for coll, vall in round.items() %}
+                                                {% for coll, vall in roundList.items() %}
                                                     <div class="row">
                                                         <div class="col">
                                                             {{coll}}
