--- a/templates/medicine.html
+++ b/templates/medicine.html
@@ -71,7 +71,111 @@
     {% endfor %}
 </div>
 
-<h1>Curriculum & Careers</h1>
+<h1 class="py-3">Curriculum</h1>
+<div class="accordion" id="accordionExampleCur">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOneCur">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCur" aria-expanded="true" aria-controls="collapseOneCur">
+            ทันตแพทยศาสตร์ (หลักสูตรก็เหมือนกันหมดแหละ)
+        </button>
+      </h2>
+      <div id="collapseOneCur" class="accordion-collapse collapse show" aria-labelledby="headingOneCur" data-bs-parent="#accordionExampleCur">
+        <div class="accordion-body">
+            <div class="list-group w-auto">
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">มหาวิทยาลัยขอนแก่น ทันตแพทยศาสตรบัณฑิต</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">มหาวิทยาลัยสงขลานครินทร์ ทันตแพทยศาสตรบัณฑิต</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">มหาวิทยาลัยนเรศวร ทันตแพทยศาสตรบัณฑิต</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">วิทยาลัยทันตแพทยศาสตร์ มหาวิทยาลัยรังสิต ทันตแพทยศาสตรบัณฑิต</h6>
+                    </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
+
+<h1 class="py-3">Career</h1>
+<div class="accordion" id="accordionExampleCar">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOneCar">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCar" aria-expanded="true" aria-controls="collapseOneCar">
+            ทันตแพทยศาสตร์
+        </button>
+      </h2>
+      <div id="collapseOneCur" class="accordion-collapse collapse show" aria-labelledby="headingOneCar" data-bs-parent="#accordionExampleCar">
+        <div class="accordion-body">
+            <div class="list-group w-auto">
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">เงินเดือนจบใหม่เฉลี่ย 18,750 บาท</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">ค่าตำแหน่ง(พ.ต.ส.) 5,000 บาท</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">ค่าไม่ทำเวช 10,000 บาท</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">เบี้ยกันดาร 0-30,000 บาท</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">ทำงานล่วงเวลา 10,000 บาท</h6>
+                    </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h5 class="mb-0">สรุป ประมาณ 44,000-70,000 บาท (ขึ้นกับสถานที่ทำงานและโรงพยาบาลที่ไปทำ)</h5>
+                    </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
+
+
 <div class="list-group w-auto">
     <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
         <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
