full career & curriculum

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
       <li class="nav-item"><a href="/medicine" class="nav-link px-2 text-muted">Medicine</a></li>
       <li class="nav-item"><a href="/others" class="nav-link px-2 text-muted">Others</a></li>
     </ul>
-    <p class="text-center text-muted">Website Created by 6/3 No.12, 17</p>
+    <p class="text-center text-muted">Website Created by 6/3 No.12, 17. Presented by No. 2, 11</p>
   </footer>
 </div>
 {% endblock %}
