--- a/templates/engineering.html
+++ b/templates/engineering.html
@@ -86,6 +86,42 @@
     {% endfor %}
 </div>
 
+<h1 class="py-3">Curriculum</h1>
+<div class="accordion" id="accordionExampleCur">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOneCur">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCur" aria-expanded="true" aria-controls="collapseOneCur">
+            Nan
+        </button>
+      </h2>
+      <div id="collapseOneCur" class="accordion-collapse collapse show" aria-labelledby="headingOneCur" data-bs-parent="#accordionExampleCur">
+        <div class="accordion-body">
+            <div class="list-group w-auto">
+                Nan
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
+
+<h1 class="py-3">Career</h1>
+<div class="accordion" id="accordionExampleCar">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOneCar">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCar" aria-expanded="true" aria-controls="collapseOneCar">
+            Nan
+        </button>
+      </h2>
+      <div id="collapseOneCur" class="accordion-collapse collapse show" aria-labelledby="headingOneCar" data-bs-parent="#accordionExampleCar">
+        <div class="accordion-body">
+            <div class="list-group w-auto">
+                Nan
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
+
 <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-2 mb-3">
