--- a/templates/science.html
+++ b/templates/science.html
@@ -75,11 +75,11 @@
 <div class="accordion" id="accordionExampleCur">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOneCur">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCur" aria-expanded="true" aria-controls="collapseOneCur">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCur" aria-expanded="true" aria-controls="collapseOneCur">
             Nan
         </button>
       </h2>
-      <div id="collapseOneCur" class="accordion-collapse collapse show" aria-labelledby="headingOneCur" data-bs-parent="#accordionExampleCur">
+      <div id="collapseOneCur" class="accordion-collapse collapse" aria-labelledby="headingOneCur" data-bs-parent="#accordionExampleCur">
         <div class="accordion-body">
             <div class="list-group w-auto">
                 Nan
@@ -93,11 +93,11 @@
 <div class="accordion" id="accordionExampleCar">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOneCar">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCar" aria-expanded="true" aria-controls="collapseOneCar">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCar" aria-expanded="true" aria-controls="collapseOneCar">
             Nan
         </button>
       </h2>
-      <div id="collapseOneCur" class="accordion-collapse collapse show" aria-labelledby="headingOneCar" data-bs-parent="#accordionExampleCar">
+      <div id="collapseOneCur" class="accordion-collapse collapse" aria-labelledby="headingOneCar" data-bs-parent="#accordionExampleCar">
         <div class="accordion-body">
             <div class="list-group w-auto">
                 Nan
