--- a/templates/engineering.html
+++ b/templates/engineering.html
@@ -13,6 +13,7 @@
 
 <hr class="my-2">
 
+<h1 class="py-3">Admission</h1>
 <div class="accordion" id="accordionExample">
     {% for uni, uniList in programList.items() %}
     <div class="accordion-item">
